...
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/favourite_swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/favourite_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            tools:listitem="@layout/item_list_stop" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <LinearLayout
        android:id="@+id/favorite_message_empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/frame_medium"
        android:elevation="@dimen/elevation_card"
        android:gravity="center"
...
