...

    <string name="route_detail_size_stops">%s stops</string>
    <string name="route_detail_title">Route %s</string>
    <string name="route_detail_error">No route info available.</string>
    <string name="route_detail_no_items">No items</string>

    <string name="real_time_remove_favourite">Removed from Favourites</string>
    <string name="real_time_add_favourite">Saved in Favourites</string>
    <string name="real_time_error_message">Sorry, Real Time Information is currently unavailable for this bus stop</string>

    <string name="main_search_hint">Search here</string>

    <string name="near_search_button">Search this area</string>
    <string name="near_me_title">Near me</string>
...
